hphp/test/quick/no_hh/nullsafe-call-no-hh.php.expectf

Fatal error: Operator '?->' is only allowed in Hack. in %s/nullsafe-call-no-hh.php on line 10
